<resources>
    <string name="app_name">SPB Explorer</string>
    <string name="big_title">Saint Petersburg</string>
    <string name="home">Home</string>
    <string name="locations">Locations</string>
    <string name="share">Share</string>
    <string name="search">Search here ...</string>
    <string name="call">Call</string>
    <string name="msg">Message</string>
    <string name="site">Website</string>
    <string name="big_description">Saint Petersburg, often referred to as the "Venice of the North," is a city that captures the imagination with its stunning architecture, rich history, and cultural vibrancy. Founded by Tsar Peter the Great in 1703, the city was designed to be Russia’s "window to the West," and it stands as a testament to his vision. Located on the Neva River, Saint Petersburg is known for its network of canals and elegant bridges that give it a distinctly European feel, often evoking the charm of Venice. The city’s architecture is a blend of baroque, neoclassical, and Russian Revival styles, creating a majestic skyline. The Winter Palace, now part of the Hermitage Museum, is one of the most iconic landmarks, housing one of the world’s largest art collections. Visitors to Saint Petersburg are also drawn to the Church of the Savior on Spilled Blood, with its colorful, onion-shaped domes, and the stunning Catherine Palace, which reflects the opulence of the Russian Empire. Saint Petersburg is famous for its White Nights, a phenomenon that occurs in the summer when the sun barely sets, creating an enchanting atmosphere. During this time, the city comes alive with cultural events, including ballet, opera, and music festivals. The Mariinsky Theatre is world-renowned for its ballet and opera performances, attracting visitors from around the globe. The city is also home to a vibrant literary history, having been the birthplace of iconic writers like Dostoevsky and Pushkin. Today, it remains a cultural hub, with its theaters, museums, galleries, and historic sites. Whether strolling along Nevsky Prospect, exploring the grand palaces, or enjoying the scenic canals, Saint Petersburg offers a unique blend of history, culture, and beauty that is unforgettable. </string>
    <string name="credits">Credits:\nHAMACHE Abdelmalek\nLOUBAR Anes\nZORGANI Alaaeddine</string>
    <string name="site1_title">The Church of the Savior</string>
    <string name="site1_summary">The Church of the Savior on Spilled Blood in Saint Petersburg is renowned for its vibrant, ornate architecture and colorful domes.</string>
    <string name="site1_description">The Church of the Savior on Spilled Blood, located in Saint Petersburg, is one of the most iconic landmarks in Russia. Built between 1883 and 1907, it was constructed on the site where Emperor Alexander II was assassinated in 1881, hence the name "on Spilled Blood." This magnificent church is a stunning example of Russian Revival architecture, featuring intricate mosaics, colorful onion domes, and an ornate façade. The exterior of the cathedral is adorned with vibrant ceramic tiles, golden accents, and intricate carvings, giving it a fairy-tale-like appearance. The church s most distinctive feature is its series of colorful onion domes, which are covered in bright, multicolored patterns. Inside, the walls are covered with over 7,500 square meters of mosaics, making it one of the largest mosaic collections in the world. These mosaics depict scenes from the Bible, as well as figures from Russian history and religious iconography. The cathedral’s interior is equally breathtaking, with its soaring ceilings, rich decoration, and an overall atmosphere of grandeur and reverence. While no longer used as a traditional place of worship, the Church of the Savior on Spilled Blood serves as a museum and is a popular tourist destination, attracting visitors with its beauty and historical significance.</string>
    <string name="site2_title">The Winter Palace</string>
    <string name="site2_summary">The Winter Palace in Saint Petersburg is an opulent former royal residence, showcasing grand architecture and housing the Hermitage Museum. </string>
    <string name="site2_description">The Winter Palace, located in the heart of Saint Petersburg, is one of Russia s most iconic and opulent buildings. Originally built as a royal residence for the Russian Tsars, it served as the official home of the imperial family from 1732 until the Russian Revolution in 1917. Designed by Bartolomeo Rastrelli in the Baroque style, the palace features a stunning façade with elaborate decorations, grand windows, and gilded accents, creating a sense of regal splendor. The Winter Palace is known for its grand scale and intricate interiors, with lavish rooms adorned with gold, crystal, and luxurious furniture. The palace boasts over 1,500 rooms, including the famous Jordan Staircase and the magnificent St. George Hall, where formal events were held. Today, the Winter Palace is part of the Hermitage Museum, one of the largest and most prestigious art museums in the world. The museum’s collections span from ancient artifacts to modern art, and the palace itself is a testament to the grandeur of the Russian Empire. Visitors can explore its ornate halls, discover its fascinating history, and admire the priceless art housed within its walls. The Winter Palace remains a symbol of imperial power, cultural heritage, and architectural beauty.</string>
    <string name="site3_title">Yelagin Palace</string>
    <string name="site3_summary">Yelagin Palace is a neoclassical residence in Saint Petersburg, surrounded by a scenic park, offering cultural exhibitions, relaxation, and historical charm.</string>
    <string name="site3_description">Yelagin Palace is a stunning neoclassical residence located on Yelagin Island in Saint Petersburg, Russia. Designed by the renowned architect Carlo Rossi in the early 19th century, the palace was originally built as a royal retreat for Empress Maria Feodorovna, mother of Emperor Alexander I. It is surrounded by the picturesque Yelagin Island Park, a popular destination for both tourists and locals seeking relaxation in nature.The palace features elegant interiors, showcasing Russian and European decorative arts from the 18th and 19th centuries. Today, it houses a museum dedicated to Russian aristocratic life, with exhibitions on furniture, porcelain, and historical artifacts. Visitors can explore beautifully restored halls, admire intricate ceiling frescoes, and experience the grandeur of imperial Russia.Beyond its historical significance, Yelagin Island offers outdoor activities such as cycling, boating, and ice skating in winter. The island is also home to concerts, art festivals, and cultural events throughout the year. Unlike the bustling tourist sites in the city center, Yelagin Palace provides a peaceful retreat with stunning views of the Neva River. Whether for history, culture, or nature, Yelagin Palace is a must-visit gem in Saint Petersburg.</string>
    <string name="site4_title">The Peter and Paul Fortress</string>
    <string name="site4_summary">The Peter and Paul Fortress in Saint Petersburg is a historic site featuring the cathedral, museums, and beautiful riverside views. </string>
    <string name="site4_description">The Peter and Paul Fortress, located on Zayachy Island in Saint Petersburg, is one of the city s most significant historical landmarks. Founded by Tsar Peter the Great in 1703, it is the oldest structure in Saint Petersburg and played a crucial role in the city’s early defense. The fortress was initially built to protect the new Russian capital from possible attacks by Sweden, but over time, it evolved into a symbol of the Russian Empire s strength and resilience. The fortress is best known for housing the Peter and Paul Cathedral, an architectural masterpiece in the Baroque style. The cathedral’s golden spire, which reaches over 120 meters in height, dominates the skyline and is visible from many parts of the city. Inside, the cathedral is the final resting place of many Russian tsars, including Peter the Great, Catherine the Great, and Nicholas II. Beyond the cathedral, the fortress complex includes several other historic buildings, including the State Prison Museum and the Trubetskoy Bastion, where political prisoners were once held. Visitors to the fortress can explore its well-preserved walls, watchtowers, and museums, learning about the fortress’s role in Russian history. The fortress also offers stunning views of the Neva River and the surrounding city. It remains a must-see attraction in Saint Petersburg, blending history, culture, and beautiful scenery.</string>
    <string name="site5_title">Catherine Palace</string>
    <string name="site5_summary">Catherine Palace in Tsarskoye Selo is a stunning Baroque-style palace known for its opulent interiors, including the Amber Room. </string>
    <string name="site5_description">Catherine Palace, located in Tsarskoye Selo just outside Saint Petersburg, is one of Russia s most magnificent and historic royal residences. Originally built in the early 18th century for Empress Catherine I, the palace underwent several expansions and renovations under Empress Elizabeth and Catherine the Great, evolving into a stunning example of Baroque architecture. The palace is renowned for its grandeur and opulence, with its striking blue and white façade, gilded trim, and intricately designed interiors. The most famous feature of the palace is the Amber Room, often referred to as the "Eighth Wonder of the World." This room, decorated with intricate amber panels, mirrors, and gold leaf, was lost during World War II but has since been painstakingly restored. Other notable rooms include the Grand Hall, with its magnificent mirrors and chandeliers, and the White Hall, known for its elegant, classical design. The palace is surrounded by beautiful gardens, including the Catherine Park, which is home to scenic ponds, wooded areas, and ornamental pavilions. The palace’s interiors are filled with luxurious furniture, paintings, and sculptures, showcasing the wealth and culture of Imperial Russia. Today, Catherine Palace is a popular tourist destination, offering visitors a glimpse into the splendor of Russia’s imperial past.</string>
    <string name="site6_title">St. Isaac s</string>
    <string name="site6_summary">St. Isaac s Cathedral in Saint Petersburg is a majestic architectural marvel, known for its massive dome and stunning interior. </string>
    <string name="site6_description">St. Isaac s Cathedral in Saint Petersburg is one of the most impressive landmarks in Russia, renowned for its grand architecture and rich history. Completed in 1858, the cathedral was designed by the French architect Auguste de Montferrand in the Neoclassical style. Its massive golden dome, one of the largest in the world, dominates the city s skyline and is visible from many parts of Saint Petersburg. The interior of St. Isaac s Cathedral is equally spectacular, adorned with intricate mosaics, marble columns, and elaborate frescoes. The cathedral s walls and ceilings are decorated with vibrant religious artwork, including pieces by some of Russia s most renowned artists. Visitors are also drawn to the massive dome, which can be climbed for breathtaking panoramic views of the city. Originally built as a place of worship, St. Isaac s Cathedral now serves as a museum, showcasing its history and architectural significance. It is dedicated to Saint Isaac of Dalmatia, the patron saint of Peter the Great, who founded the city. The cathedral is located in the heart of Saint Petersburg, surrounded by a large square and park, making it a popular stop for tourists and a symbol of Russia s cultural and spiritual heritage.</string>
    <string name="site7_title">The Russian Museum</string>
</resources>