<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
        <ImageView
            android:id="@+id/image_slider"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/henrys_house"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/big_title"
            android:textStyle="bold"
            android:textSize="35dp"
            android:text="@string/"
            android:layout_below="@id/image_slider"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="5dp"
            android:layout_marginTop="10dp"
            style="@style/TitleText" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/big_title"
            android:text="@string/big_description"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="30dp"
            android:id="@+id/big_description"
            style="@style/BodyText" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/big_description"
            android:layout_marginBottom="150dp"
            android:layout_centerHorizontal="true">

            <Button
                android:layout_width="110dp"
                android:layout_height="34dp"
                android:text="@string/call"
                android:textSize="7sp"
                android:textColor="@color/md_theme_primary"
                android:background="@drawable/favoris_btn"
                android:drawableLeft="@drawable/call"
                android:id="@+id/call_btn"
                android:layout_margin="2dp"
                android:fontFamily="@font/sf_pro_text_bold"/>

            <Button
                android:layout_width="110dp"
                android:layout_height="34dp"
                android:text="@string/msg"
                android:textSize="7sp"
                android:textColor="@color/md_theme_primary"
                android:id="@+id/message_btn"
                android:layout_toEndOf="@id/call_btn"
                android:layout_margin="2dp"
                android:background="@drawable/favoris_btn"
                android:drawableLeft="@drawable/message"
                android:fontFamily="@font/sf_pro_text_bold"/>

            <Button
                android:layout_width="110dp"
                android:layout_height="34dp"
                android:text="@string/site"
                android:textSize="7sp"
                android:textColor="@color/md_theme_primary"
                android:id="@+id/website_btn"
                android:layout_toEndOf="@id/message_btn"
                android:layout_margin="2dp"
                android:background="@drawable/favoris_btn"
                android:drawableLeft="@drawable/site"
                android:fontFamily="@font/sf_pro_text_bold"/>
        </RelativeLayout>

    </RelativeLayout>
</ScrollView>