<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="locale">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".MainActivity">
            <com.smarteist.autoimageslider.SliderView
                android:id="@+id/image_slider"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:sliderAnimationDuration="600"
                app:sliderAutoCycleDirection="back_and_forth"
                app:sliderAutoCycleEnabled="true"
                app:sliderIndicatorAnimationDuration="600"
                app:sliderIndicatorGravity="center_horizontal|bottom"
                app:sliderIndicatorMargin="15dp"
                app:sliderIndicatorOrientation="horizontal"
                app:sliderIndicatorPadding="3dp"
                app:sliderIndicatorRadius="2dp"
                app:sliderIndicatorSelectedColor="#5A5A5A"
                app:sliderIndicatorUnselectedColor="#FFF"
                app:sliderScrollTimeInSec="2"
                app:sliderStartAutoCycle="true">

            </com.smarteist.autoimageslider.SliderView>

            <TextView
                android:id="@+id/big_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="35dp"
                android:text="@string/big_title"
                android:layout_below="@id/image_slider"
                android:layout_marginStart="20dp"
                android:padding="5dp"
                android:layout_marginTop="10dp"
                style="@style/TitleText"
                android:textDirection="locale"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/big_title"
                android:text="@string/big_description"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                style="@style/BodyText"
                android:id="@+id/big_description"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/big_description"
                android:text="@string/credits"
                android:layout_marginStart="220dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="20dp"
                android:textStyle="italic|bold"
                style="@style/TitleText"
                android:id="@+id/credits"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:visibility="invisible"
                android:layout_below="@id/credits" />

        </RelativeLayout>
    </ScrollView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="@dimen/material_emphasis_high_type"
        android:contentDescription="Search"
        android:src="@drawable/translate"
        android:translationX="300dp"
        android:translationY="600dp"
        app:useCompatPadding="false" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
